# thermite

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh
.github/workflows/: ci.yml
src/: errors.rs  handlers.rs  lib.rs  main.rs  notification.rs  queue.rs  task.rs  worker.rs
tests/: test_hardening.rs  test_task.rs
