[package]
name = "thermite"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
actix-web = "4.9.0"
redis = { version = "0.26.1", features = ["aio", "async-std-comp"] }
tokio = { version = "1.39.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.5", features = ["json"] }
cron = "0.12.1"
chrono = "0.4"
